cmake_minimum_required(VERSION 3.5)

project(messenger LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt5 COMPONENTS Widgets REQUIRED)

add_executable(messenger
    main.cpp
    mainwindow.cpp
    mainwindow.h
    mainwindow.ui
    basic.h
    basic.cpp
    basic.ui
)

target_link_libraries(messenger PRIVATE Qt5::Widgets)
